# czutils

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/czutils/: __init__.py  hide.py
src/czutils/app/: __init__.py  czmake.py  demo.py  fill.py  hide.py  textformat.py
src/czutils/czmake/: __init__.py  __main__.py  clp.py  czmake.py
src/czutils/demo/: __init__.py  __main__.py  czmath.py  czoutline.py  cztext.py  czthreading.py  czuioutput.py
src/czutils/hide/: __init__.py  __main__.py  clp.py  hide.py
src/czutils/lib/: __init__.py  czcode.py  cziterable.py  czlogging.py  czmath.py  czoutline.py  czstrutils.py  czsystem.py  cztext.py  czthreading.py  cztime.py  czuioutput.py
src/czutils/private/: __init__.py  czmake.py  fill.py  hide.py  textformat.py
src/czutils/textformat/: __init__.py  __main__.py  clp.py  textformat.py
src/czutils/utils/: __init__.py  czcode.py  cziterable.py  czlogging.py  czoutline.py  czstring.py  czstrutils.py  czsystem.py  cztext.py  czthreading.py  cztime.py
