# Copyright (C) 2005 - present  Alexander Czutro <github@czutro.ch>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# For more details, see the provided licence file or
# <http://www.gnu.org/licenses>.
#
################################################################### aczutro ###

[tool.poetry]
name = "czutils"
version = "1.0.1"
description = "A \"universal\" Python library and collection of useful command line utilities."
authors = ["Alexander Czutro <github@czutro.ch>"]
homepage = "https://github.com/aczutro/czutils"
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hide = "czutils.app:mainHide"
uhide = "czutils.app:mainUhide"
czmake = "czutils.app:mainCZMake"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

### aczutro ###################################################################
