# Copyright (C) 2005 - present  Alexander Czutro <github@czutro.ch>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# For more details, see the provided licence file or
# <http://www.gnu.org/licenses>.
#
################################################################### aczutro ###

[tool.poetry]
name = "czutils"
version = "1.4.1+1"
description = "A \"universal\" Python library and collection of useful command-line utilities."
authors = ["Alexander Czutro <github@czutro.ch>"]
homepage = "https://github.com/aczutro/czutils"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
czmake = "czutils.czmake:main"
czutils-demo = "czutils.demo:main"
hide = "czutils.hide:hide"
uhide = "czutils.hide:uhide"
textformat = "czutils.textformat:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

### aczutro ###################################################################
