# Copyright (C) 2005 - present  Alexander Czutro <github@czutro.ch>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# See the provided licence file, or http://www.gnu.org/licenses/ .
#
################################################################### aczutro ###

[metadata]
name = czutils
version = 1.0
author = Alexander Czutro
author_email = github@czutro.ch
url = http://alexander.czutro.ch
packager = Alexander Czutro <github@czutro.ch>
description = A collection of useful command line utilities and libraries for Python 3.
license = GNU GPL v3

[options]
package_dir = =src
packages = find:

[options.packages.find]
where = src

### aczutro ###################################################################
